hphp/hack/test/typecheck/shape_idx5.php
<?hh

type s = shape(
  'x' => int,
  ...
);

/**
 * Field not listed in declared shape - lint warning to access it
 */
function test(s $s): void {
  Shapes::idx($s, 'y');
}
